Update Vulnerabilities api (#40)
